--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
     "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-standard": "^4.0.0",
     "prettier": "^1.14.2"
+  },
+  "dependencies": {
+    "create-react-app": "^1.5.2",
+    "styled-components": "^3.4.9"
   }
 }
