--- a/package.json
+++ b/package.json
@@ -17,21 +17,10 @@
   },
   "homepage": "https://github.com/masterlink64/Rithm_Practice#readme",
   "devDependencies": {
-    "eslint": "^5.5.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^3.0.1",
-    "eslint-config-prettier-standard": "^2.0.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-node": "^7.0.1",
-    "eslint-plugin-prettier": "^2.6.2",
-    "eslint-plugin-promise": "^4.0.0",
-    "eslint-plugin-react": "^7.11.1",
-    "eslint-plugin-standard": "^4.0.0",
     "prettier": "^1.14.2"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "create-react-app": "^1.5.2",
     "styled-components": "^3.4.9"
   }
