--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "prettier": "^1.14.2"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "create-react-app": "^1.5.2",
     "styled-components": "^3.4.9"
